# Img2Avif

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: quality_security.yml
cli/: img2avif.cpp  img2avifs.cpp
cmake/: img2avifConfig.cmake.in
include/: Img2Avif.hpp
src/: Img2Avif.cpp
test/: ai-generated-image.avif
